--- a/todo_list/src/App.css
+++ b/todo_list/src/App.css
@@ -1,18 +1,18 @@
 h1 {
     text-align: center;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-style: italic;
+    font-family: Helvetica, sans-serif;
+    font-style: bold;
   }
 
   body {
-    background: grey
+    background: rgb(245, 241, 241)
   }
   #todo-list {
     width: 500px;
     margin: 60px auto;
   }
   form, .todo {
-    border: 1px solid rgb(15, 26, 61);
+    border: 3px solid rgb(15, 26, 61);
     padding: 10px 20px;
     margin-bottom: 10px;
   }
@@ -38,13 +38,13 @@ h1 {
     border-radius: 8px;
     border: none;
     padding: 8px 16px;
-    cursor: pointer;
+    cursor: crosshair;
   }
   button:hover {
-    background-color: rgb(173, 47, 28);
+    background-color: rgb(28, 86, 161);
   }
   button:active {
-    background-color: rgb(130,35,21);
+    background-color: rgb(28, 86, 161);
   }
   button:focus {
     outline: 0;
